[tool.poetry]
name = "vSphere-Automation-SDK"
version = "1.78.0"
authors = ["VMWare"]
description = "VMware vSphere Automation SDK for Python"
homepage = "https://github.com/vmware/vsphere-automation-sdk-python"
packages = [
    { include = "vSphere-Automation-SDK" },
    { include = "vapi-runtime", from = "lib" },
    { include = "vapi-client-bindings", from = "lib" },
    { include = "vapi-common-client ", from = "lib" },
    { include = "vmc-client-bindings", from = "lib" },
    { include = "nsx-python-sdk", from = "lib" },
    { include = "nsx-policy-python-sdk", from = "lib" },
    { include = "nsx-vmc-policy-python-sdk", from = "lib" },
    { include = "nsx-vmc-aws-integration-python-sdk", from = "lib" },
    { include = "vmc-draas-client-bindings", from = "lib" },
]
include = [
 { path = "lib", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
lxml = ">=4.3.0"
pyVmomi = ">=6.7"
#vapi-runtime = { path = "lib/vapi-runtime/vapi_runtime-2.34.0-py2.py3-none-any.whl" }
#vapi-client-bindings = { path = "lib/vapi-client-bindings/vapi_client_bindings-3.9.0-py2.py3-none-any.whl" }
#vapi-common-client = { path = "lib/vapi-common-client/vapi_common_client-2.34.0-py2.py3-none-any.whl" }
#vmc-client-bindings = { path = "lib/vmc-client-bindings/vmc_client_bindings-1.60.0-py2.py3-none-any.whl" }
#nsx-python-sdk = { path = "lib/nsx-python-sdk/nsx_python_sdk-4.0.0.0.0-py2.py3-none-any.whl" }
#nsx-policy-python-sdk = { path = "lib/nsx-policy-python-sdk/nsx_policy_python_sdk-4.0.0.0.0-py2.py3-none-any.whl" }
#nsx-vmc-policy-python-sdk = { path = "lib/nsx-vmc-policy-python-sdk/nsx_vmc_policy_python_sdk-4.0.0.0.0-py2.py3-none-any.whl" }
#nsx-vmc-aws-integration-python-sdk = { path = "lib/nsx-vmc-aws-integration-python-sdk/nsx_vmc_aws_integration_python_sdk-4.0.0.0.0-py2.py3-none-any.whl" }
#vmc-draas-client-bindings = { path = "lib/vmc-draas-client-bindings/vmc_draas_client_bindings-1.19.0-py2.py3-none-any.whl" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
